--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 						<header class="major" id="education">
 							<h2 id="neo">Roles & Responsibilities</h2>
 						</header>
-						<p>▪ Team Leader of our team in Social Innovation Club.<br><br>
+						<p>▪ Team Leader in Social Innovation Club.<br><br>
 						</p>
 						
 					</section>
@@ -99,6 +99,7 @@
 							<h2 id="neo">Projects</h2>
 						</header>
 						<p> ▪<strong>Automatic Coolant Level Controller</strong>: An IoT based project which controls the level of coolant.<br><br>
+							▪<strong>Fingerprint Door Unlock</strong>: An IoT based project which unlocks the door with fingerprint.<br><br>
 							▪<strong>Automatic Plant Watering System</strong>: An IoT based project which waters the plant by dectecting the moisture level of soil.<br><br>
 							▪<strong>Severity of an Accident Predictor</strong>: A Machine Learning model which can predict if an accident would result in severity.<br><br>
 							▪<strong>Fake News Detector</strong>: A Deep Learning Neural Net which can predict if a given news is fake or not.<br><br>
